--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-django==2.2.5
-django-widget-tweaks==1.4.5
 autopep8==1.4.4
-ipdb==0.12.2
+Django==2.2.5
+XlsxWriter==1.2.1
+python-dateutil==2.8.0
+django-widget-tweaks==1.4.5
